# jobrunner-git

./: Makefile  format.sh  pylintrc  pyproject.toml  renovate.json
.github/workflows/: pylint.yml  python-package.yml  python-publish.yml
jobrunner_git/: project.py
tests/: test_project.py
