[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "jobrunner-git"
dynamic = ["version"]
description = "shell-jobrunner plugin to provide \"project plugin\" context from git repos"
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Terminals",
    "Topic :: System :: Shells",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/wwade/jobrunner-git"
Source = "https://github.com/wwade/jobrunner-git"

[project.entry-points."wwade.jobrunner"]
jobrunner_git_project = "jobrunner_git.project"

[tool.poetry]
version = "0.0.0"
packages = [{include = "jobrunner_git"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
flake8 = "7.3.0"
isort = "5.13.2"
modernize = {version = "0.8.0", python = ">=3.9,<4.0"}
mypy = "1.19.0"
pylint = "3.3.9"
pytest = "8.1.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.setuptools_scm]
# Enable setuptools-scm for dynamic versioning
